# O365-email-attachment-processor

./: .gitignore  README.md  pyproject.toml
src/o365-email-attachment-processor/: Email Rules Template.xlsx  README.md  default_email_rules.json  main.py  o365_accounts.json
src/o365-email-attachment-processor/utils/: password.py  password_aws.py  password_keyring.py  password_ssm.py
templates/: Sample Email Rules.xlsx
